--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quantum Particle in a Box</title>
-  <script src="bundle.js"></script>
+  <script src="./dist/bundle.js"></script>
   <link 
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" 
     rel="stylesheet"
