Add graph description

--- a/index.html
+++ b/index.html
@@ -20,24 +20,22 @@
       <span class="nav-item">created by kieran scannell</span>
       <a 
         href="https://en.wikipedia.org/wiki/Particle_in_a_box"
-        class="nav-item link">
-        description of the model
-      </a>
-      <a href="https://github.com/ktscannell" class="nav-item link">github</a>
+        class="nav-item link" target="_blank">description of the model</a>
+      <a 
+        href="https://github.com/ktscannell" 
+        class="nav-item link" target="_blank">github</a>
       <a 
         href="https://www.linkedin.com/in/kieran-scannell-31326574/" 
-        class="nav-item link">
-        linkedin
-      </a>
+        class="nav-item link" target="_blank">linkedin</a>
     </nav>
   </header>
   <main class="main">
-    <div class="outer-graph-container">
-      <div class="inner-graph-container">
-        <canvas id="myCanvas"></canvas>
-      </div>
-    </div>
+    <canvas id="myCanvas"></canvas>
     <div class="sidebar input-text">
+      <span class="info">
+        this graph displays magnitude on the y axis 
+        <br>as a function of position on the x axis
+      </span>
       <div class="key-container">
         <div class="red key"></div>
         <span>real part of the wave function</span>
