--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     rel="stylesheet"
   >
   <!-- from favicon generator -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="/quantum-box/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/quantum-box/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/quantum-box/favicon-16x16.png">
+  <link rel="manifest" href="/quantum-box/site.webmanifest">
+  <link rel="mask-icon" href="/quantum-box/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/quantum-box/favicon.ico">
   <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="/quantum-box/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
